Criando repositório, controller, user e routes de usuários
