# src/modules/accounts/UseCases/CreateUser/CreateUserController.ts
@@ -1,0 +1,22 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+import { CreateUserUseCase } from "./CreateUserUseCase";
+
+
+export class CreateUserController {
+    async handle(request: Request, response: Response): Promise<Response> {
+        const { name, username, password, email, driver_license } = request.body;
+
+        const createUserUseCase = container.resolve(CreateUserUseCase);
+
+        await createUserUseCase.execute({
+            name,
+            username,
+            password,
+            email,
+            driver_license
+        });
+
+        return response.status(201).send();
+    }
+}
