# src/routes/users.routes.ts
@@ -1,0 +1,14 @@
+import { Router } from "express";
+
+import { CreateUserController } from "../modules/accounts/UseCases/CreateUser/CreateUserController";
+
+const usersRoutes = Router();
+
+
+const createUserController = new CreateUserController();
+
+usersRoutes.post("/create", createUserController.handle);
+
+
+
+export { usersRoutes };
